divided viewport in different section

--- a/index.html
+++ b/index.html
@@ -10,14 +10,38 @@
     <!-- link font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <!-- link font -->
+    <!-- link google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
     <title>Bo Spotify web</title>
 </head>
+
 <body>
+
+    <div class="main_container">
+
+        <div class="shell">
+
+            <!-- Barra controlli laterale -->
+            <div class="left_sidebar">
+
+            </div>
+
+            <!-- Sezione contenuti -->
+            <section class="container">
+
+            </section>
+
+        </div>
+
+        <!-- Barra controlli bassa -->
+        <div class="bottom_playbar">
+
+        </div>
+
+    </div>
     
 </body>
 </html>
