add section in left sidebar and btn in container

--- a/index.html
+++ b/index.html
@@ -27,10 +27,54 @@
             <!-- Barra controlli laterale -->
             <div class="left_sidebar">
 
+                <div class="left_sidebar_top">
+                    
+                    <ul>
+                        <li class="left_sidebar_top_icon">
+                            <a href="#"><img src="img/logo-small.svg" alt="logo"></a>
+                        </li>
+
+                        <li class="left_sidebar_top_icon">
+                            <a href="#"><img src="img/home.svg" alt="home"></a>
+                        </li>
+
+                        <li class="left_sidebar_top_icon">
+                            <a href="#"><img src="img/search.svg" alt="search"></a>
+                        </li>
+
+                        <li class="left_sidebar_top_icon">
+                            <a href="#"><img src="img/libreria.svg" alt="library"></a>
+                        </li>
+                    </ul>
+
+                </div>
+
+                <div class="left_sidebar_middle">
+
+                </div>
+
+                <div class="left_sidebar_bottom">
+
+                    <ul>
+                        <li class="left_sidebar_bottom_icon i_small">
+                            <a href="#"><img src="img/download.svg" alt="download"></a>
+                        </li>
+
+                        <li class="left_sidebar_bottom_icon">
+                            <a href="#"><img src="img/profile.svg" alt="profile"></a>
+                        </li>
+                    </ul>   
+
+                </div>
+
             </div>
 
-            <!-- Sezione contenuti -->
+            <!-- Sezione contenuti centrale -->
             <section class="container">
+
+                <div class="container_upgrade">
+                        <a href="#">EFFETTUA L'UPGRADE</a>
+                </div>
 
             </section>
 
