add link a in navbar container

--- a/index.html
+++ b/index.html
@@ -72,8 +72,21 @@
             <!-- Sezione contenuti centrale -->
             <section class="container">
 
-                <div class="container_upgrade">
-                        <a href="#">EFFETTUA L'UPGRADE</a>
+                <!-- bottone upgrade -->
+                <div class="container_upgrade strong">
+                    <a href="#">EFFETTUA L'UPGRADE</a>
+                </div>
+
+                <!-- navbar container centrale -->
+                <div class="container_navbar">
+                    <ul class="container_navbar_box strong">
+                        <li><a href="#">PODCAST</a></li>
+                        <li><a href="#">CLASSIFICHE</a></li>
+                        <li><a href="#">IN EVIDENZA</a></li>
+                        <li><a href="#">GENERI E MOOD</a></li>
+                        <li><a href="#">NUOVE USCITE</a></li>
+                        <li><a href="#">SCOPRI</a></li>
+                    </ul>
                 </div>
 
             </section>
