add card img and title in container

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             <!-- Sezione contenuti centrale -->
             <section class="container">
 
-                <!-- bottone upgrade -->
+                <!-- sezione bottone upgrade -->
                 <div class="container_upgrade strong">
                     <a href="#">EFFETTUA L'UPGRADE</a>
                 </div>
 
-                <!-- navbar container centrale -->
+                <!-- sezione navbar container centrale -->
                 <div class="container_navbar">
                     <ul class="container_navbar_box strong">
                         <li><a href="#">PODCAST</a></li>
@@ -88,6 +88,88 @@
                         <li><a href="#">SCOPRI</a></li>
                     </ul>
                 </div>
+
+                <!-- sezione titolo con box -->
+                <section class="container_content">
+                    <h1>Recently played</h1>
+
+                    <div class="container_content_box">
+
+                        <!-- card -->
+                        <div class="container_content_card">
+                            <div class="container_content_card_img">
+                                <img src="img/metal_lifting.jpg" alt="musica metal">
+                            </div>
+
+                            <div class="container_content_card_text">
+                                <h2>Heave metal</h2>
+                                <h3>Subtitle</h3>
+                            </div>
+                        </div>
+
+                        <!-- card -->
+                        <div class="container_content_card">
+                            <div class="container_content_card_img">
+                                <img src="img/stranger.jpeg" alt="musica stranger things">
+                            </div>
+
+                            <div class="container_content_card_text">
+                                <h2>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h2>
+                                <h3>Kyle Dixon e Michael Stein</h3>
+                            </div>
+                        </div>
+
+                        <!-- card -->
+                        <div class="container_content_card">
+                            <div class="container_content_card_img">
+                                <img src="img/aquietplace.jpeg" alt="musica quiet place">
+                            </div>
+
+                            <div class="container_content_card_text">
+                                <h2>A quiet place</h2>
+                                <h3>Subtitle</h3>
+                            </div>
+                        </div>
+
+                        <!-- card -->
+                        <div class="container_content_card">
+                            <div class="container_content_card_img">
+                                <img src="img/split.jpeg" alt="musica split">
+                            </div>
+
+                            <div class="container_content_card_text">
+                                <h2>Split</h2>
+                                <h3>Subtitle</h3>
+                            </div>
+                        </div>
+
+                        <!-- card -->
+                        <div class="container_content_card">
+                            <div class="container_content_card_img">
+                                <img src="img/cure.jpeg" alt="musica cure">
+                            </div>
+
+                            <div class="container_content_card_text">
+                                <h2>A cure for welness</h2>
+                                <h3>Subtitle</h3>
+                            </div>
+                        </div>
+
+                        <!-- card -->
+                        <div class="container_content_card">
+                            <div class="container_content_card_img">
+                                <img src="img/sinister.jpeg" alt="musica sinister">
+                            </div>
+
+                            <div class="container_content_card_text">
+                                <h2>Sinister</h2>
+                                <h3>Subtitle</h3>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </section>
 
             </section>
 
