--- a/index.html
+++ b/index.html
@@ -169,6 +169,64 @@
 
                     </div>
 
+                    <h1>Creato per john Doe</h1>
+                    <h3 class="pad_top_bottom">Più ascolti, più accurati saranno i suggerimenti.</h3>
+
+                    <div class="container_content_box">
+
+                        <!-- card -->
+                        <div class="container_content_card">
+                            <div class="container_content_card_img">
+                                <img src="img/radar.jpeg" alt="musica release radar">
+                            </div>
+
+                            <div class="container_content_card_text">
+                                <h2>Release radar</h2>
+                            </div>
+                        </div>
+
+                        <!-- card -->
+                        <div class="container_content_card">
+                            <div class="container_content_card_img">
+                                <img src="img/mixdaily.jpeg" alt="musica mixdaily">
+                            </div>
+
+                            <div class="container_content_card_text">
+                                <h2>Daily Mix 1</h2>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <h1>Creato per john Doe</h1>
+                    <h3 class="pad_top_bottom">Più ascolti, più accurati saranno i suggerimenti.</h3>
+
+                    <div class="container_content_box">
+
+                        <!-- card -->
+                        <div class="container_content_card">
+                            <div class="container_content_card_img circle">
+                                <img src="img/youg.jpeg" alt="musica Lana del Ray">
+                            </div>
+
+                            <div class="container_content_card_text">
+                                <h2>Lana del Ray</h2>
+                            </div>
+                        </div>
+
+                        <!-- card -->
+                        <div class="container_content_card">
+                            <div class="container_content_card_img circle">
+                                <img src="img/einaudi.jpeg" alt="musica Ludovico Einaudi">
+                            </div>
+
+                            <div class="container_content_card_text">
+                                <h2>Ludovico Einaudi</h2>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </section>
 
             </section>
@@ -177,6 +235,61 @@
 
         <!-- Barra controlli bassa -->
         <div class="bottom_playbar">
+
+            <!-- barra controlli sezione sinistra -->
+            <div class="bottom_playbar_left">
+                <div class="bottom_playbar_left_img">
+                    <img src="img/sinister.jpeg" alt="img sinister">
+                </div>
+
+                <div class="bottom_playbar_left_text">
+                    <h2 class="h2_small">Sinister</h2>
+                    <h3 class="h3_small">Brano nome</h3>
+                </div>
+
+                <div class="bottom_playbar_left_icon">
+                    <a href="#"><i class="far fa-heart"></i></a>
+                    <a href="#"><i class="far fa-folder"></i></a>
+                </div>
+            </div>
+
+            <!-- barra controlli sezione centrale -->
+            <div class="bottom_playbar_middle">
+                <div class="bottom_playbar_middle_controls">
+                    <a href="#"><i class="fas fa-random"></i></a>
+                    <a href="#"><i class="fas fa-caret-left"></i></a>
+                    <a href="#"><i class="fas fa-play i_play_control"></i></a>
+                    <a href="#"><i class="fas fa-caret-right"></i></a>
+                    <a href="#"><i class="fas fa-redo-alt"></i></a>
+                </div>
+
+                <div class="bottom_playbar_middle_timebar">
+                    <div class="botom_playbar_middle_timebar_sec">
+                        <span>0:25</span>
+                    </div>
+
+                    <div class="botom_playbar_middle_timebar_line start_bar">
+                        <div class="progress_bar"></div>
+                    </div>
+
+                    <div class="botom_playbar_middle_timebar_sec">
+                        <span>4:35</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- barra controlli sezione destra -->
+            <div class="bottom_playbar_right">
+                <div class="bottom_playbar_right_icon">
+                    <a href="#"><i class="fas fa-list"></i></a>
+                    <a href="#"><i class="fas fa-desktop"></i></a>
+                    <a href="#"><i class="fas fa-volume-up"></i></a>
+                </div>
+
+                <div class="bottom_playbar_right_volumebar start_bar">
+                    <div class="progress_bar"></div>
+                </div>
+            </div>
 
         </div>
 
