start  to change html in different resolution

--- a/index.html
+++ b/index.html
@@ -31,19 +31,23 @@
                     
                     <ul>
                         <li class="left_sidebar_top_icon">
-                            <a href="#"><img src="img/logo-small.svg" alt="logo"></a>
+                            <a href="#" class="only_xs"><img src="img/logo-small.svg" alt="logo"></a>
+                            <a href="#" class="display_xs_none"><img src="img/logo.svg" alt="logo Spotify"></a>
                         </li>
 
                         <li class="left_sidebar_top_icon">
                             <a href="#"><img src="img/home.svg" alt="home"></a>
+                            <span>Home</span>
                         </li>
 
                         <li class="left_sidebar_top_icon">
                             <a href="#"><img src="img/search.svg" alt="search"></a>
+                            <span>Cerca</span>
                         </li>
 
                         <li class="left_sidebar_top_icon">
                             <a href="#"><img src="img/libreria.svg" alt="library"></a>
+                            <span>La tua libreria</span>
                         </li>
                     </ul>
 
