add style in different media queries

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <!-- Barra controlli laterale -->
             <div class="left_sidebar">
 
+                <!-- barra controlli laterale sezione alta -->
                 <div class="left_sidebar_top">
                     
                     <ul>
@@ -37,35 +38,62 @@
 
                         <li class="left_sidebar_top_icon">
                             <a href="#"><img src="img/home.svg" alt="home"></a>
-                            <span>Home</span>
+                            <a href="#" class="display_xs_none"><span class="c_white">Home</span></a>
                         </li>
 
                         <li class="left_sidebar_top_icon">
                             <a href="#"><img src="img/search.svg" alt="search"></a>
-                            <span>Cerca</span>
+                            <a href="#" class="display_xs_none"><span class="c_grey">Cerca</span></a>
                         </li>
 
                         <li class="left_sidebar_top_icon">
                             <a href="#"><img src="img/libreria.svg" alt="library"></a>
-                            <span>La tua libreria</span>
+                            <a href="#" class="display_xs_none"><span class="c_grey">La tua libreria</span></a>
                         </li>
                     </ul>
 
                 </div>
 
+                <!-- barra controlli laterale sezione centrale -->
                 <div class="left_sidebar_middle">
+
+                    <div class="left_sidebar_middle_head display_xs_none">
+                        <h4 class="c_white">PLAYLIST</h4>
+                        <a href="#"><i class="fas fa-plus-square c_grey"></i> <span class="c_grey">Crea la playlist</span></a>
+                    </div>
+
+                    <div class="left_sidebar_middle_playlist display_xs_none">
+                        <ul>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+                            <li><a class="c_grey" href="#">Nome Playlist</a></li>
+
+                        </ul>
+                    </div>
 
                 </div>
 
+                <!-- barra controlli laterale sezione bassa -->
                 <div class="left_sidebar_bottom">
 
                     <ul>
                         <li class="left_sidebar_bottom_icon i_small">
                             <a href="#"><img src="img/download.svg" alt="download"></a>
+                            <a href="#" class="display_xs_none"><span class="c_grey">Installa app</span></a>
                         </li>
 
                         <li class="left_sidebar_bottom_icon">
                             <a href="#"><img src="img/profile.svg" alt="profile"></a>
+                            <a href="#" class="display_xs_none"><span class="c_white">John Doe</span></a>
                         </li>
                     </ul>   
 
