add some animation with hover

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
                         <li class="left_sidebar_top_icon">
                             <a href="#"><img src="img/home.svg" alt="home"></a>
-                            <a href="#" class="display_xs_none"><span class="c_white">Home</span></a>
+                            <a href="#" class="display_xs_none"><span class="c_lightgray">Home</span></a>
+                            <div class="vertical_line"></div>
                         </li>
 
                         <li class="left_sidebar_top_icon">
@@ -111,8 +112,8 @@
 
                 <!-- sezione navbar container centrale -->
                 <div class="container_navbar">
-                    <ul class="container_navbar_box strong">
-                        <li><a href="#">PODCAST</a></li>
+                    <ul class="container_navbar_box">
+                        <li><a href="#">PODCAST</a><div class="horizontal_line"></div></li>
                         <li><a href="#">CLASSIFICHE</a></li>
                         <li><a href="#">IN EVIDENZA</a></li>
                         <li><a href="#">GENERI E MOOD</a></li>
@@ -131,6 +132,9 @@
                         <div class="container_content_card">
                             <div class="container_content_card_img">
                                 <img src="img/metal_lifting.jpg" alt="musica metal">
+                                <div class="overlay_card">
+                                    <i class="far fa-play-circle"></i>
+                                </div>
                             </div>
 
                             <div class="container_content_card_text">
@@ -143,6 +147,9 @@
                         <div class="container_content_card">
                             <div class="container_content_card_img">
                                 <img src="img/stranger.jpeg" alt="musica stranger things">
+                                <div class="overlay_card">
+                                    <i class="far fa-play-circle"></i>
+                                </div>
                             </div>
 
                             <div class="container_content_card_text">
@@ -155,6 +162,9 @@
                         <div class="container_content_card">
                             <div class="container_content_card_img">
                                 <img src="img/aquietplace.jpeg" alt="musica quiet place">
+                                <div class="overlay_card">
+                                    <i class="far fa-play-circle"></i>
+                                </div>
                             </div>
 
                             <div class="container_content_card_text">
@@ -167,6 +177,9 @@
                         <div class="container_content_card">
                             <div class="container_content_card_img">
                                 <img src="img/split.jpeg" alt="musica split">
+                                <div class="overlay_card">
+                                    <i class="far fa-play-circle"></i>
+                                </div>
                             </div>
 
                             <div class="container_content_card_text">
@@ -179,6 +192,9 @@
                         <div class="container_content_card">
                             <div class="container_content_card_img">
                                 <img src="img/cure.jpeg" alt="musica cure">
+                                <div class="overlay_card">
+                                    <i class="far fa-play-circle"></i>
+                                </div>
                             </div>
 
                             <div class="container_content_card_text">
@@ -191,6 +207,9 @@
                         <div class="container_content_card">
                             <div class="container_content_card_img">
                                 <img src="img/sinister.jpeg" alt="musica sinister">
+                                <div class="overlay_card">
+                                    <i class="far fa-play-circle"></i>
+                                </div>
                             </div>
 
                             <div class="container_content_card_text">
@@ -210,6 +229,9 @@
                         <div class="container_content_card">
                             <div class="container_content_card_img">
                                 <img src="img/radar.jpeg" alt="musica release radar">
+                                <div class="overlay_card">
+                                    <i class="far fa-play-circle"></i>
+                                </div>
                             </div>
 
                             <div class="container_content_card_text">
@@ -221,6 +243,9 @@
                         <div class="container_content_card">
                             <div class="container_content_card_img">
                                 <img src="img/mixdaily.jpeg" alt="musica mixdaily">
+                                <div class="overlay_card">
+                                    <i class="far fa-play-circle"></i>
+                                </div>
                             </div>
 
                             <div class="container_content_card_text">
@@ -239,6 +264,9 @@
                         <div class="container_content_card">
                             <div class="container_content_card_img circle">
                                 <img src="img/youg.jpeg" alt="musica Lana del Ray">
+                                <div class="overlay_card">
+                                    <i class="far fa-play-circle"></i>
+                                </div>
                             </div>
 
                             <div class="container_content_card_text">
@@ -250,6 +278,9 @@
                         <div class="container_content_card">
                             <div class="container_content_card_img circle">
                                 <img src="img/einaudi.jpeg" alt="musica Ludovico Einaudi">
+                                <div class="overlay_card">
+                                    <i class="far fa-play-circle"></i>
+                                </div>
                             </div>
 
                             <div class="container_content_card_text">
@@ -276,7 +307,7 @@
 
                 <div class="bottom_playbar_left_text">
                     <h2 class="h2_small">Sinister</h2>
-                    <h3 class="h3_small">Brano nome</h3>
+                    <a href="#"><h3 class="h3_small">Brano nome</h3></a>
                 </div>
 
                 <div class="bottom_playbar_left_icon">
@@ -290,7 +321,7 @@
                 <div class="bottom_playbar_middle_controls">
                     <a href="#"><i class="fas fa-random"></i></a>
                     <a href="#"><i class="fas fa-caret-left"></i></a>
-                    <a href="#"><i class="fas fa-play i_play_control"></i></a>
+                    <a href="#"><i class="far fa-play-circle i_play_control"></i></a>
                     <a href="#"><i class="fas fa-caret-right"></i></a>
                     <a href="#"><i class="fas fa-redo-alt"></i></a>
                 </div>
