add new media queries (min-w 430px max-h 470px)

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
                         <li class="left_sidebar_top_icon">
                             <a href="#"><img src="img/home.svg" alt="home"></a>
                             <a href="#" class="display_xs_none"><span class="c_lightgray">Home</span></a>
-                            <div class="vertical_line"></div>
+                            <div class="vertical_line display_big_height"></div>
                         </li>
 
-                        <li class="left_sidebar_top_icon">
+                        <li class="left_sidebar_top_icon display_big_height">
                             <a href="#"><img src="img/search.svg" alt="search"></a>
                             <a href="#" class="display_xs_none"><span class="c_grey">Cerca</span></a>
                         </li>
 
-                        <li class="left_sidebar_top_icon">
+                        <li class="left_sidebar_top_icon display_big_height">
                             <a href="#"><img src="img/libreria.svg" alt="library"></a>
                             <a href="#" class="display_xs_none"><span class="c_grey">La tua libreria</span></a>
                         </li>
@@ -87,7 +87,7 @@
                 <div class="left_sidebar_bottom">
 
                     <ul>
-                        <li class="left_sidebar_bottom_icon i_small">
+                        <li class="left_sidebar_bottom_icon i_small display_big_height">
                             <a href="#"><img src="img/download.svg" alt="download"></a>
                             <a href="#" class="display_xs_none"><span class="c_grey">Installa app</span></a>
                         </li>
@@ -106,7 +106,7 @@
             <section class="container">
 
                 <!-- sezione bottone upgrade -->
-                <div class="container_upgrade strong">
+                <div class="container_upgrade">
                     <a href="#">EFFETTUA L'UPGRADE</a>
                 </div>
 
@@ -122,7 +122,7 @@
                     </ul>
                 </div>
 
-                <!-- sezione titolo con box -->
+                <!-- sezione titolo con card -->
                 <section class="container_content">
                     <h1>Recently played</h1>
 
@@ -270,7 +270,7 @@
                             </div>
 
                             <div class="container_content_card_text">
-                                <h2>Lana del Ray</h2>
+                                <h2>Lana del Rey</h2>
                             </div>
                         </div>
 
@@ -306,8 +306,8 @@
                 </div>
 
                 <div class="bottom_playbar_left_text">
-                    <h2 class="h2_small">Sinister</h2>
-                    <a href="#"><h3 class="h3_small">Brano nome</h3></a>
+                    <h2 class="h2_small display_xxs_none">Sinister</h2>
+                    <a class="display_xxs_none" href="#"><h3 class="h3_small">Brano nome</h3></a>
                 </div>
 
                 <div class="bottom_playbar_left_icon">
@@ -349,7 +349,7 @@
                     <a href="#"><i class="fas fa-volume-up"></i></a>
                 </div>
 
-                <div class="bottom_playbar_right_volumebar start_bar">
+                <div class="bottom_playbar_right_volumebar start_bar display_xxs_none">
                     <div class="progress_bar"></div>
                 </div>
             </div>
